# sudoku-buddy

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  sudoku_ai.py  sudoku_core.py  sudoku_gui.py
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/sudoku/: __init__.py
src/sudoku/ai/: __init__.py  sudoku_ai.py
src/sudoku/core/: __init__.py  sudoku_core.py
src/sudoku/gui/: __init__.py  app.py  layout.py  styles.py  timer.py  widgets.py
tests/: conftest.py  test_basic.py  test_core.py
