# pyproject.toml
[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Advanced Sudoku Game with AI Solver"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "sudoku", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.0"
sphinx = "^6.2.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = [".git", "venv", ".venv", "migrations"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = """
    --verbose
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-branch
    --no-cov-on-fail
    """
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]